Fix race in RemoteRenderingBackend::allowsExitUnderMemoryPressure() https://bugs.webkit.org/show_bug.cgi?id=229870 <rdar://82459484>

Reviewed by David Kilzer.

RemoteRenderingBackend::m_remoteResourceCache should only be used safely from RemoteRenderingBackend's work queue.
RemoteRenderingBackend::allowsExitUnderMemoryPressure() gets called on the main thread so we need to make sure we
dispatch to RemoteRenderingBackend's work queue before accessing m_remoteResourceCache.

* GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::allowsExitUnderMemoryPressure const):


Canonical link: https://commits.webkit.org/241317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282011 268f45cc-cd09-0410-ab3c-d52691b4dbfc